Cleanup command line parameters